Adding creation timestamp and card list sorting
